Add basic routes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 </li>
             </ul>
         </header>
-        <div id="main">
+        <div id="content"></div>
+        <div id="main" class="hidden">
         	<div id="radio-buttons">
         		<input type="radio" id="radio-button-xhr" name="XHR">
         		<label for="radio-button-xhr">XHR</label>
@@ -49,7 +50,9 @@
 	          </div>
 	        </div>
         </div>
-        <div id="about" class="hidden"></div>
+        <div id="about" class="hidden">
+        	Some info about the application
+        </div>
         <div id="author" class="hidden">
           <h1>
             Author <br>
