--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         	  <button>Search</button>
           </div>
           <div id="yandex-map">
-          	map
+            <div id="map" style="width: 100%; height: 100%"></div>
           </div>
           <div id="boxes">
 	          <div id="history">
@@ -62,6 +62,9 @@
           </h1>
         </div>
     </div>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
+    <script src="request_map.js" type="text/javascript"></script>
     <script src="script.js"></script>
 </body>
 
