--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
 	          </div>
 	        </div>
         </div>
-        <div id="about" class="hidden">
-        	Some info about the application
-        </div>
+        <div id="about" class="hidden"></div>
         <div id="author" class="hidden">
           <h1>
             Author <br>
@@ -64,7 +62,8 @@
     </div>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
-    <script src="request_map.js" type="text/javascript"></script>
+    <script src="about.js"></script>
+    <script src="author.js"></script>
     <script src="script.js"></script>
 </body>
 
